# django-coupons

./: README.md  pyproject.toml
core/: settings.py  urls.py  views.py
coupon_checker/: admin.py  decorators.py  forms.py  models.py  permissions.py  urls.py  views.py
coupon_checker/apis/: serializers.py  urls.py  views.py
coupon_checker/middleware/: request_logger.py
coupon_checker/migrations/: 0001_initial.py  0002_alter_coupon_code_coupon_unique_coupon_per_store.py  0003_couponreport_status.py  0004_alter_couponreport_discount.py  0005_couponreport_checked_country.py  0006_alter_couponreport_checked_country.py  0007_alter_couponreport_checked_country.py  0008_alter_couponreport_product_link.py  0009_alter_couponreport_product_link.py  0010_alter_coupon_company.py
keyword_scrapper/: apps.py  urls.py  views.py
link_checker/: urls.py  views.py
static_collected/css/: style.css
templates/: base.html  home.html
templates/authenticate/: login.html
templates/backlink_checker/: control.html
templates/backlink_checker/create/: add_website.html
templates/backlink_checker/update/: edit.html
templates/coupon_checker/: company_list.html  country_list.html  coupon_checker.html  report_list.html  store_coupons.html  website_stores.html  websites.html
templates/coupon_checker/create/: company_create.html  country_create.html  coupon_create.html  store_create.html  website_create.html
templates/coupon_checker/partials/: store_list.html
templates/coupon_checker/update/: company_update.html  (+4 more)
templates/keyword_scrapper/: control.html
users/: urls.py
